# file-filter-build

./: .gitignore  CMakeLists.txt
.github/workflows/: filter-run-execA.yml  filter-run-execB.yml  filter-run-execC.yml
src/common/: classCommon.h
src/execA/: CMakeLists.txt  classA.h  main.cpp
src/execB/: CMakeLists.txt  classB.h  main.cpp
src/execC/: CMakeLists.txt  classC.h  main.cpp
